# training_system

./: .gitignore  build.sh  pyproject.toml  render.yaml  v1 Макеты интерфейсов (Романов).docx  ~$ Макеты интерфейсов (Романов).docx  ~$римеры.docx  Подсистема контроля знаний и навыков (АС _Успеваемость студентов_).docx  Примеры.docx
src/: Dockerfile  custom_types.py  db.sqlite3  docker-compose.yml  entrypoint.prod.sh  generate_java_test.py  nginx.conf  prepros.config  pyproject.toml  render.yaml  requirements.txt  utils.py
src/abstractions/: __init__.py  abstract_completed_testing.py
src/abstractions/abstract_fields/: __init__.py  abstract_field_serial_number.py  abstract_field_title.py  abstract_field_weight.py
src/abstractions/abstract_form_fields/: __init__.py  abstract_form_field_description.py
src/abstractions/abstract_forms/: __init__.py  abstract_task_form.py  abstract_testing_form.py
src/abstractions/abstract_models/: __init__.py  abstract_completed_testing.py  abstract_solving_task.py  abstract_solving_testing.py  abstract_task.py  abstract_testing.py
src/abstractions/abstract_services/: __init__.py  (+1 more)
src/config/: settings.py  urls.py  wsgi.py
src/interfaces/: i_filter_testing.py
src/mixins/: __init__.py  context_mixin.py  login_mixin.py  url_mixin.py
src/services/: __init__.py  get_field_values.py  update_testing.py
src/static/: staticfiles.json
src/templates/: base.html  student_groups_tpl.html  student_solving_testing_detail.html  testing_button_tpl.html  testing_confirm_delete.html  testing_create.html  testing_list.html  testing_list_buttons_tpl.html  testing_list_tpl.html  testing_update.html
src/templatetags/: testing_list.py
src/testing/: abstractions.py  admin.py  forms.py  interfaces.py  models.py  types.py  urls.py  utils.py  views.py
src/user/: admin.py  forms.py  models.py  urls.py  views.py
(+683 files in other folders)
