[tool.poetry]
name = "training-system"
version = "0.1.0"
description = ""
authors = ["Roman <maks3564195@gmail.com>"]
readme = "README.md"
packages = [{ include = "config" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.7"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"
django-jquery = "^3.1.0"
django-pwa = "^1.1.0"
dj-database-url = "^2.0.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
